Minor style changes -fixed corner gap when divs wrap

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,8 @@ a{
     max-width: 80%;
     min-width: fit-content;
     align-items: stretch;
+    border-radius:  5px;
+    overflow: hidden;
 }
 
 #left_container{
@@ -69,7 +71,6 @@ a{
     flex-grow: 1;
     padding: 36px;
     width: 30%;
-    border-radius: 5px  0 0 5px;
 }
 img{
     max-width: 80px; /* MR */
@@ -87,7 +88,6 @@ p{
     padding: 16px;
     flex-grow: 5;
     justify-content: center;
-    border-radius: 0 5px 5px 0;
 }
 #sign-up-form, #login-form{
     box-sizing: border-box;
